--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -29,4 +29,4 @@ jobs:
        
       - name: pytest run
         run: |
-          pytest --cov=funibot_api tests/
+          pytest --cov=funibot_api
