--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -1,9 +1,10 @@
 name: Tests Python
 
-on:
-  push
-    # paths:
-    #   - '**.py'
+on: push
+# on:
+#   push:
+#     paths:
+#       - '**.py'
 
 jobs:
   pytest_api:
@@ -35,4 +36,4 @@ jobs:
         uses: romeovs/lcov-reporter-action@v0.2.16
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          lcov-file: /coverage/lcov.html
+          lcov-file: ~/.coverage/lcov.html
