--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -30,9 +30,7 @@ jobs:
        
       - name: pytest run
         run: |
-          pytest --cov=funibot_api --cov-report=xml:'~/.coverage/lcov.info'
+          pytest --cov=funibot_api
 
       - name: coverage report
-        uses: romeovs/lcov-reporter-action@v0.2.16
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+        uses: 
