--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -38,3 +38,5 @@ jobs:
           fail_ci_if_error: true
           files: ./coverage.xml
           flags: python_api
+          verbose: true
+          name: python_api
