--- a/.github/.codecov.yml
+++ b/.github/.codecov.yml
@@ -7,6 +7,7 @@ flags:
   #     - funibot_cli/
 
 ignore:
-  - "Code"
-  - "Code/API"
-  - "Code/API/Python"
+  - "/*"
+  - "Code/*"
+  - "Code/API/*"
+  - "Code/API/Python/*"
