--- a/.github/.codecov.yml
+++ b/.github/.codecov.yml
@@ -2,12 +2,11 @@ flags:
   python_api:
     paths:
       - funibot_api/
+    carryforward: true
   # python_cli:
   #   paths:
   #     - funibot_cli/
 
 ignore:
-  - "/*"
-  - "Code/*"
-  - "Code/API/*"
-  - "Code/API/Python/*"
+  - "/*/**"
+  - "!funibot_api"
