--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -38,4 +38,5 @@ jobs:
           fail_ci_if_error: true
           files: ./coverage.xml
           flags: python_api
+          carryforward: true
           name: python_api
