--- a/.github/workflows/tests_cpp.yml
+++ b/.github/workflows/tests_cpp.yml
@@ -34,4 +34,15 @@ jobs:
         run: echo "Compilation avec" ${{ matrix.python-version }}
 
       - name: gtest run
+        #run: make tests ${{ matrix.python-version }}
         run: echo "Réalisation des tests"
+
+      - name: coverage report
+        # uses: codecov/codecov-action@v1
+        # with:
+        #   fail_ci_if_error: true
+        #   files: ./coverage.xml
+        #   flags: cpp_embarque
+        #   carryforward: true
+        #   name: cpp_embarque
+        run: echo "Coverage"
