--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -1,10 +1,10 @@
 name: Tests Python
 
-on: push
-# on:
-#   push:
-#     paths:
-#       - '**.py'
+# on: push
+on:
+  push:
+    paths:
+      - '**.py'
 
 jobs:
   pytest_api:
