test pour le coverage mieux

--- a/.github/.codecov.yml
+++ b/.github/.codecov.yml
@@ -2,6 +2,7 @@ flags:
   python_api:
     paths:
       - funibot_api/
+    carryforward: true
   # python_cli:
   #   paths:
   #     - funibot_cli/
