--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -34,6 +34,7 @@ jobs:
       - name: pytest run
         run: |
           pytest --cov=funibot_api --cov-branch --cov-report=xml:./coverage.xml
+          pytest --cov=funibot_api --cov-branch --cov-report=html:./coverage.html
 
       - name: coverage report
         uses: codecov/codecov-action@v1
@@ -47,7 +48,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: coverage
-          path: ./coverage.xml
+          path: ./coverage.html
 
       - name: list filesystem
         run: ls -R
