--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -39,6 +39,7 @@ jobs:
       - name: coverage report
         uses: codecov/codecov-action@v1
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
           files: ./coverage.xml
           flags: python_api
