--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -45,6 +45,7 @@ jobs:
           flags: python_api
           name: python_api
           verbose: true
+          functionalities: html
 
       - name: coverage upload
         uses: actions/upload-artifact@v2
