--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -54,4 +54,6 @@ jobs:
           path: ./coverage.html
 
       - name: list filesystem
-        run: ls -R
+        run: |
+          pwd
+          ls -R
