--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
+          flag: python_api
 
       - name: coverage upload
         uses: actions/upload-artifact@v2
