--- a/.github/workflows/tests_python.yml
+++ b/.github/workflows/tests_python.yml
@@ -40,6 +40,7 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           fail_ci_if_error: true
+          flags: python_api
 
       - name: coverage upload
         uses: actions/upload-artifact@v2
