--- a/.github/.codecov.yml
+++ b/.github/.codecov.yml
@@ -1,9 +1,5 @@
-flags:
-  python_api:
-    paths:
-      - funibot_api/
-    carryforward: true
-  # python_cli:
-  #   paths:
-  #     - funibot_cli/
+# flags:
+#   python_api:
+#     paths:
+#       - funibot_api/
   
