Modif support encodeur

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.SLDDRW filter=lfs diff=lfs merge=lfs -text
 *.SLDASM filter=lfs diff=lfs merge=lfs -text
 *.PNG filter=lfs diff=lfs merge=lfs -text
+*.STEP filter=lfs diff=lfs merge=lfs -text
