--- a/Code/API/Python/config.yaml
+++ b/Code/API/Python/config.yaml
@@ -2,7 +2,7 @@
   serial:
     port: COM5
     baudrate: 57600
-  # sol: null
+  sol: -1000
   poteaux: # distances en mm
     moteur1:
       poles:
