--- a/Code/API/Python/config.yaml
+++ b/Code/API/Python/config.yaml
@@ -4,22 +4,22 @@
     baudrate: 57600
   sol: -1000
   poteaux: # distances en mm
-    moteur1:
-      poles:
-        x: 0
-        y: 0
-        z: 0
-      accroches:
-        x: -55
-        y: 100
-        z: 0
-    moteur4:
-      poles:
-        x: 1180
-        y: 0
-        z: 0
-      accroches:
-        x: 55
-        y: 100
-        z: 0
+    - moteur1:
+        poles:
+          x: 0
+          y: 0
+          z: 0
+        accroches:
+          x: -55
+          y: 100
+          z: 0
+    - moteur4:
+        poles:
+          x: 1180
+          y: 0
+          z: 0
+        accroches:
+          x: 55
+          y: 100
+          z: 0
 ...
