--- a/Code/API/Python/config.yaml
+++ b/Code/API/Python/config.yaml
@@ -4,40 +4,40 @@
     baudrate: 57600
   sol: -1000
   poteaux: # distances en mm
-    pot0:
-      poles:
-        x: 0
-        y: 0
-        z: 0
-      accroches:
-        x: 0
-        y: 0
-        z: 0
-    pot1:
-      poles:
-        x: 1220
-        y: 0
-        z: 0
-      accroches:
-        x: 0
-        y: 0
-        z: 0
-    pot2:
-      poles:
-        x: 1220
-        y: 0
-        z: 1180
-      accroches:
-        x: 0
-        y: 0
-        z: 0
-    pot3:
-      poles:
-        x: 0
-        y: 0
-        z: 1220
-      accroches:
-        x: 0
-        y: 0
-        z: 0
+    - pot0:
+        poles:
+          x: 0
+          y: 0
+          z: 0
+        accroches:
+          x: 0
+          y: 0
+          z: 0
+    - pot1:
+        poles:
+          x: 1220
+          y: 0
+          z: 0
+        accroches:
+          x: 0
+          y: 0
+          z: 0
+    - pot2:
+        poles:
+          x: 1220
+          y: 0
+          z: 1180
+        accroches:
+          x: 0
+          y: 0
+          z: 0
+    - pot3:
+        poles:
+          x: 0
+          y: 0
+          z: 1220
+        accroches:
+          x: 0
+          y: 0
+          z: 0
 ...
