--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pycodestyle==2.6.0
 Pygments==2.8.0
 pyparsing==2.4.7
 pyserial==3.5
+PySide6==6.0.2
 pytest==6.2.2
 pytest-cov==2.11.1
 python-benedict==0.23.2
@@ -33,6 +34,9 @@ python-fsutil==0.4.0
 python-slugify==4.0.1
 PyYAML==5.4.1
 requests==2.25.1
+ruamel.yaml==0.16.13
+ruamel.yaml.clib==0.2.2
+shiboken6==6.0.2
 six==1.15.0
 text-unidecode==1.3
 toml==0.10.2
