--- a/Code/API/Python/config.yaml
+++ b/Code/API/Python/config.yaml
@@ -3,6 +3,10 @@ serial:
   port: COM5
   baudrate: 57600
 sol: -1000
+persistance:
+    fichier: Code/API/Python/calibration.yaml
+    auto-persistance: False
+    auto-calibration: False
 poteaux: # distances en mm
   - moteur1:
       poles:
@@ -14,6 +18,24 @@ poteaux: # distances en mm
         y: 100
         z: 0
   - moteur4:
+      poles:
+        x: 1180
+        y: 0
+        z: 0
+      accroches:
+        x: 55
+        y: 100
+        z: 0
+  - moteur2:
+      poles:
+        x: 0
+        y: 0
+        z: 0
+      accroches:
+        x: -55
+        y: 100
+        z: 0
+  - moteur3:
       poles:
         x: 1180
         y: 0
