Modifications de la structure des dossiers et mise à jour des dépendances

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,18 +19,17 @@ classifiers =
 [options]
 package_dir =
     = Code/API/Python
-packages = funibot_api
+packages =
+    funibot_api
 test_suite = tests
 py_modules =
-    cli_demo
+    funibot-cli
 python_requires = >=3.7
 install_requires =
     PyYAML
     ruamel.yaml
     pyserial
+    python-benedict
 test_requires =
     pytest
     pytest-cov
-    
-# [options.packages.find]
-# where = Code/API/Python
