CHANGEMENT DE STRUCTURE: TOUT VA PÉTER SUR VSCODE

--- a/asetup.cfg
+++ b/asetup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = funibot-neorobrooke
-version = 2.0.1-alpha
+version = 2.0.0-alpha
 author = Néorobrooke
 author_email = warp0901@usherbrooke.ca
 description = Permet de contrôler un Funibot
@@ -26,10 +26,10 @@ py_modules =
     funibot-cli
 python_requires = >=3.7
 install_requires =
-    PyYAML
-    ruamel.yaml
-    pyserial
-    python-benedict
+    PyYAML >= 5.4.1
+    ruamel.yaml >= 0.17.2
+    pyserial >= 3.5
+    python-benedict >= 0.23.2
 test_requires =
-    pytest
-    pytest-cov
+    pytest >= 6.2.2
+    pytest-cov >= 2.11.1
