--- a/setup.cfg
+++ b/setup.cfg
@@ -18,18 +18,32 @@ classifiers =
 
 [options]
 package_dir =
-    = Code/API/Python
+    = Code/API
 packages =
     funibot_api
-test_suite = tests
 py_modules =
-    funibot-cli
-python_requires = >=3.7
+    funibot_cli
+    funibot_scripts
+python_requires = >=3.7, <3.10
 install_requires =
     PyYAML >= 5.4.1
     ruamel.yaml >= 0.17.2
     pyserial >= 3.5
     python-benedict >= 0.23.2
-test_requires =
-    pytest >= 6.2.2
-    pytest-cov >= 2.11.1
+
+[options.extras_require]
+dev =
+    autopep8>=1.5.6
+    ipython>=7.22.0
+test =
+    pytest>=6.2.2
+    pytest-cov>=2.11.1
+
+[options.entry_points]
+console_scripts =
+    funibot-cli = funibot_cli:main
+    funibot-config = funibot_scripts:ouvrir_config
+    funibot-erreurs = funibot_scripts:ouvrir_erreurs
+    funibot-doc = funibot_scripts:ouvrir_doc
+    funibot-dossier = funibot_scripts:ouvrir_dossier
+
