--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,7 @@ requires = [
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
+
+[tool.pytest.ini_options]
+required_plugins = "pytest-cov>=2.11.1"
+addopts = "--cov=funibot_api --cov-report=html:htmlcov_funibot_api"
