Ajout d'un script pour copier les fichiers de configuration et de calibration dans le dossier actuel

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,8 +42,8 @@ test =
 [options.entry_points]
 console_scripts =
     funibot-cli = funibot_cli:main
+    funibot-init = funibot_scripts:copier_config
     funibot-config = funibot_scripts:ouvrir_config
     funibot-erreurs = funibot_scripts:ouvrir_erreurs
     funibot-doc = funibot_scripts:ouvrir_doc
     funibot-dossier = funibot_scripts:ouvrir_dossier
-
