Déplacement des tests d'algorithme en Python hors du dossier pour l'API

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,6 @@ test =
 console_scripts =
     funibot-cli = funibot_cli:main
     funibot-init = funibot_scripts:copier_config
-    funibot-config = funibot_scripts:ouvrir_config
+    funibot-copier-doc = funibot_scripts:copier_doc
     funibot-erreurs = funibot_scripts:ouvrir_erreurs
     funibot-doc = funibot_scripts:ouvrir_doc
-    funibot-dossier = funibot_scripts:ouvrir_dossier
