Incrémentation de la version de 2.0.0-alpha à 2.0.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = funibot-neorobrooke
-version = 2.0.0-alpha
+version = 2.0.0
 author = Néorobrooke
 author_email = warp0901@usherbrooke.ca
 description = Permet de contrôler un Funibot
